--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "deel-task",
   "version": "0.1.0",
   "private": true,
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
+  },
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "4.17.1",
@@ -10,11 +16,14 @@
   },
   "scripts": {
     "start": "nodemon ./src/server.js",
-    "seed": "node ./scripts/seedDb.js"
+    "seed": "node ./scripts/seedDb.js",
+    "test": "jest"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
-    "nodemon": "^2.0.22"
+    "jest": "^29.5.0",
+    "nodemon": "^2.0.22",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=10.16.3"
