--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "scripts": {
     "start": "nodemon ./src/server.js",
     "seed": "node ./scripts/seedDb.js",
-    "test": "jest"
+    "pretest": "npm run seed",
+    "test": "NODE_ENV=test jest --runInBand"
   },
   "devDependencies": {
     "concurrently": "^8.0.1",
